--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 server.port=8090
 
 my_prop=5000
-
 my_name=Raj
-
 # Test empty property
 my_name2=
+
+# Feature enablement
+togglz.HOME_FEATURE=true
