Echo out the runner OS

--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -9,3 +9,8 @@ jobs:
     steps:
       - name: Clone Repository
         uses: actions/checkout@v2
+      - name: Echo Variables
+        run: |
+          echo "Runner OS environment variable: $RUNNER_OS"  
+        
+        
